# ghc-artifact-collector

./: .travis.yml  CHANGELOG.md  LICENSE.md  README.md  appveyor.yml  ghc-artifact-collector.cabal  stack.yaml
.circleci/: config.yml
app/: Main.hs
