name:                 ghc-artifact-collector
version:              0.0.1.0
cabal-version:        1.18
tested-with:          GHC==8.2.2, GHC==8.4.1
license:              BSD3
license-file:         LICENSE.md
author:               Mark Karpov <mark.karpov@tweag.io>
maintainer:           Mark Karpov <mark.karpov@tweag.io>
homepage:             https://github.com/mrkkrp/ghc-artifact-collector
bug-reports:          https://github.com/mrkkrp/ghc-artifact-collector/issues
category:             Network, AWS
synopsis:             App to store GHC build artifacts created on CI
build-type:           Simple
description:          App to store GHC build artifacts created on CI.
extra-doc-files:      CHANGELOG.md
                    , README.md

source-repository head
  type:               git
  location:           https://github.com/mrkkrp/ghc-artifact-collector.git

flag dev
  description:        Turn on development settings.
  manual:             True
  default:            False

executable ghc-artifact-collector
  main-is:            Main.hs
  hs-source-dirs:     app
  build-depends:      base             >= 4.10 && < 5.0
                    , aeson            >= 1.2  && < 1.4
                    , amazonka         >= 1.4  && < 1.6
                    , amazonka-s3      >= 1.4  && < 1.6
                    , bytestring       >= 0.10 && < 0.11
                    , lens             >= 4.4  && < 4.17
                    , optparse-applicative >= 0.14 && < 0.15
                    , resourcet        >= 1.1  && < 1.2
                    , text             >= 1.2  && < 1.3
                    , time             >= 1.8  && < 2.0
                    , transformers     >= 0.5  && < 0.6
  if flag(dev)
    ghc-options:      -Wall -Werror
  else
    ghc-options:      -O2 -Wall
  default-language:   Haskell2010
